--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -22,3 +22,4 @@ jobs:
     - uses: actions/checkout@v3
     - uses: cachix/install-nix-action@v17
     - run: nix build
+    - run: nix flake check
