--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -19,5 +19,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: cachix/install-nix-action@v17
-    - run: nix build
-    - run: nix flake check
+    - run: nix build .#cpu
