--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,29 +4,27 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "evoxlib"
-version = "0.0.1"
-authors = [
-  { name="Bill Huang", email="bill.huang2001@gmail.com" },
-]
+version = "0.0.2"
+authors = [{ name = "Bill Huang", email = "bill.huang2001@gmail.com" }]
 description = "Evoxlib"
 readme = "README.md"
-license = { file="LICENSE" }
+license = { file = "LICENSE" }
 requires-python = ">=3.9"
 classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
+  "Programming Language :: Python :: 3",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: OS Independent",
 ]
+
 dependencies = [
   "chex >= 0.1.0",
   "jax >= 0.3.0",
   "jaxlib >= 0.3.0",
+  "bokeh >= 2.4.0"
 ]
 
 [project.optional-dependencies]
-tests = [
-  "pytest >= 6.0.0",
-]
+tests = ["pytest >= 6.0.0"]
 
 [project.urls]
 "Homepage" = "https://github.com/pypa/sampleproject"
