--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "evoxlib"
 version = "0.0.2"
-authors = [{ name = "Bill Huang", email = "bill.huang2001@gmail.com" }]
+authors = [{ name = "Bill Huang", email = "bill.huang2001@gmail.com" },
+           { name = "Christina Lee", email = "1315552992@qq.com"} ]
 description = "Evoxlib"
 readme = "README.md"
 license = { file = "LICENSE" }
