--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -19,4 +19,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: cachix/install-nix-action@v17
+    - uses: cachix/cachix-action@v11
+      with:
+        name: mycache
     - run: nix build .#cpu
