--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,13 +28,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install build wheel setuptools pytest
-    - name: Build package
+    - name: Build and install package
       run: |
-        python -m build --wheel
-    - name: Install package
-      run: |
-        mv dist/*.whl dist/evox.whl
-        pip install dist/evox.whl[full]
+        output=$(python -m build --wheel)
+        pip install dist/${output##* }[full]
     - name: Test with pytest
       run: |
         pytest
