--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,11 +29,18 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-tests = ["pytest >= 6.0.0", "chex >= 0.1.0"]
+tests = [
+  "chex >= 0.1.0",
+  "flax >= 0.5.0",
+  "pytest >= 6.0.0",
+]
 
 gym = ["gym >= 0.26.0"]
 
-neuroevolution = ["torch >= 1.0.0", "torchvision >= 0.1.0"]
+neuroevolution = [
+  "torch >= 1.0.0",
+  "torchvision >= 0.1.0",
+]
 
 distributed = ["ray >= 2.0.0"]
 
