--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ include-package-data = true
 [tool.setuptools.packages.find]
 where = ["src"]
 
+[tool.setuptools.package-data]
+mypkg = ["*.txt", "*.json"]
+
 [project]
 name = "evox"
 version = "0.3.0"
