add some stable settings.

--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,6 @@ monitor_out/
 tests/maze/
 tests/mujoco_envs/*
 tests/test.py
-src/evox/algorithms/mo/im_moea.py
+src/evox/algorithms/mo/_rm_meda.py
+tests/test_.py
+tests/log.txt
