--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: ["3.10", "3.11"]
 
     steps:
     - uses: actions/checkout@v3
@@ -30,20 +30,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install build wheel setuptools pytest
-    - name: Build and install package Python 3.9 (no GPJax)
-      if: matrix.python-version == '3.9'
-      run: |
-        output=$(python -m build --wheel)
-        pip install dist/${output##* }[gymnasium,envpool,neuroevolution,distributed,test]
     - name: Build and install package Python 3.10 and above
       if: matrix.python-version == '3.10' || matrix.python-version == '3.11'
       run: |
         output=$(python -m build --wheel)
         pip install dist/${output##* }[full,test]
-    - name: Test with pytest Python 3.9
-      if: matrix.python-version == '3.9'
-      run: |
-        pytest -k 'not test_im_moea and not test_gp'
     - name: Test with pytest Python 3.10 and above
       if: matrix.python-version == '3.10' || matrix.python-version == '3.11'
       run: |
