--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,8 @@ docs = [
   "sphinx-book-theme > 1.0",
   "sphinx-autodoc2",
   "sphinx",
-  "myst-nb",
+  # Use the nightly version of MyST-NB, https://github.com/executablebooks/MyST-NB/pull/600
+  "myst-nb @ git+https://github.com/executablebooks/MyST-NB.git",
   "nbsphinx",
   "myst-parser[linkify]",
   "sphinx_copybutton",
