--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,8 +49,7 @@ docs = [
   "sphinx-book-theme > 1.0",
   "sphinx-autodoc2",
   "sphinx",
-  # Use the nightly version of MyST-NB, https://github.com/executablebooks/MyST-NB/pull/600
-  "myst-nb @ git+https://github.com/executablebooks/MyST-NB.git",
+  # Use the nightly version of MyST-NB (in extra-build-requirements.txt), https://github.com/executablebooks/MyST-NB/pull/600
   "nbsphinx",
   "myst-parser[linkify]",
   "sphinx_copybutton",
