Squash several commits to avoid future conflicts.
Modify dtlz and add rveaa, zdt, maf

Fix cso algorithm

Manually import submodules

Fix std_workflow._evaluate cannot be captured by torch.compile bug

Remove unnecessary torch.jit.ignore

When recording batchedtensors, unwrap it to avoid leaking batchedtensors

Fix to_jax_array

Use normal assignment instead of inplace copy

Test vmapped workflow with monitor

Add default feature set

Update installation instruction on readme

Update install guide

Bump version to v1.1.1

add num_repeats and multi obj to hpo

Add RVEAa, modify RVEA, DTLZ and hpo_wrapper.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "evox"
-version = "1.1.0"
+version = "1.1.1"
 authors = [
   { name = "Bill Huang", email = "bill.huang2001@gmail.com" },
   { name = "Boqing Xu", email = "xuboqing123@gmail.com" },
@@ -57,6 +57,11 @@ docs = [
   "sphinx-favicon",
   "sphinxcontrib-mermaid",
   "polib",
+]
+
+default = [
+  "plotly >= 5.0.0",
+  "pandas >= 2.0.0",
 ]
 
 [project.urls]
