Use the new format for specifying license

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,11 +15,11 @@ authors = [
 ]
 description = "evox"
 readme = "README.md"
-license = { file = "LICENSE" }
+license = "GPL-3.0-or-later"
+license-file = "LICENSE"
 requires-python = ">=3.10"
 classifiers = [
   "Programming Language :: Python :: 3",
-  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
   "Intended Audience :: Science/Research",
   "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
