Normalize the language code in the readthedocs config
Use awk to normalize the string

Try fix syntax error

Use simple if-else to avoid syntax error

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -13,11 +13,19 @@ build:
   jobs:
     pre_build:
       # If language is not "en", override the tutorials with the language-specific ones
+      # Note: readthedocs uses dashes and lowercase for language codes, e.g., "zh-cn" for Chinese
+      # However, the locale directory uses underscores and uppercase, e.g., "zh_CN"
       - |
         if [ "$READTHEDOCS_LANGUAGE" != "en" ]; then
           echo "Overriding tutorials with language-specific ones"
           echo "READTHEDOCS_LANGUAGE: $READTHEDOCS_LANGUAGE"
-          cp -r docs/source/locale/${READTHEDOCS_LANGUAGE}/tutorial docs/source
+          # set the language code to the one used in the locale directory
+          if [ "$READTHEDOCS_LANGUAGE" = "zh-cn" ]; then
+            LANGUAGE_CODE="zh_CN"
+          else
+            LANGUAGE_CODE="$READTHEDOCS_LANGUAGE"
+          fi
+          cp -r docs/source/locale/${LANGUAGE_CODE}/tutorial docs/source
         fi
 
 # Build documentation in the docs/ directory with Sphinx
