--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,8 @@ docs = [
   "sphinx",
   # Use the nightly version of MyST-NB (in extra-build-requirements.txt), https://github.com/executablebooks/MyST-NB/pull/600
   "nbsphinx",
+  "myst-nb",
+  "ipython",
   "myst-parser[linkify]",
   "sphinx_copybutton",
   "sphinx_design",
