--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -11,7 +11,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -24,12 +23,12 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-        cache: pip
-        cache-dependency-path: requirements/test-requirements.txt
     - name: Install build dependencies
       run: |
         python -m pip install --upgrade pip
         python -m pip install build wheel setuptools
+        # Install CPU version of torch, as the GPU is not available in the CI
+        python -m pip install torch --index-url https://download.pytorch.org/whl/cpu
     - name: Build and install package
       run: |
         output=$(python -m build --wheel)
