--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,7 +28,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install build wheel setuptools
         # Install CPU version of torch, as the GPU is not available in the CI
-        python -m pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
+        python -m pip install --pre torch torchvision --index-url https://download.pytorch.org/whl/nightly/cpu
     - name: Build and install package
       run: |
         output=$(python -m build --wheel)
