--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,4 +81,4 @@ format.line-ending = "lf"
 # F: Pyflakes / E, W: pycodestyle / I: isort / NPY: numpy
 lint.select = ["F", "E", "W", "I", "NPY"]
 lint.ignore = ["E501"] # Ignore line length error
-lint.per-file-ignores = {"*.ipynb" = ["I001"], "src/evox/__init__.py" = ["I001"]}
+lint.per-file-ignores = {"*.ipynb" = ["I001"], "src/evox/__init__.py" = ["I001"], "src/evox_ext/autoload_ext.py" = ["I001"]}
